--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -8,10 +8,9 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     env:
       working-directory: ./src
+    runs-on: ubuntu-latest  
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -20,10 +19,13 @@ jobs:
         dotnet-version: 3.1.301
     - name: Install dependencies
       run: dotnet restore
+      working-directory: ./src
     - name: Build
       run: dotnet build --configuration Release --no-restore
+      working-directory: ./src
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+      working-directory: ./src
     - name: Publish SimpleGraph Update
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
