--- a/src/UnitTests/appsettings.json
+++ b/src/UnitTests/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
     "FakeSchoolsDb": "Server=.;Database=EfCore-UpdateGraph;Trusted_Connection=true;MultipleActiveResultSets=true"
-  }
+  },
+  "InMemoryDB": true
 }
